yamls/demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
spec:
  type: ClusterIP
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
---
# NOTE: This deployment requires the 'github-secret' to be created first
# See KUBERNETES_GITHUB_SETUP.md for complete setup instructions
# Quick setup: kubectl create secret generic github-secret --from-literal=token="ghp_your_token_here"
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  labels:
    app: demo
spec:
  replicas: 1 # Specifies the number of instances
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      serviceAccountName: demo
      containers:
        - name: demo
          image: docker.io/linsun/demo:v3
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
