yamls/httproute-agentgateway-proxy-to-demo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-proxy-to-demo
  namespace: default
spec:
  parentRefs:
    - name: agentgateway-proxy
      namespace: default
  rules:
    - backendRefs:
        - name: demo
          port: 80
